--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -17,7 +17,7 @@ body {
   font-weight: 400;
   position: relative;
   overflow: hidden;
-  width: calc(100vh * 16 / 9);
+  width: calc(100vh * 16 / 10);
   max-width: 100%;
   height: 100%;
   margin: auto;
@@ -59,27 +59,16 @@ body {
     right: 0;
     left: 0;
     overflow: hidden;
-    width: calc(100vh * 16 / 9);
+    width: calc(100vh * 16 / 10);
     max-width: 100%;
     height: 100%;
     margin: auto;
   }
 
-  .vignette,
   .cover {
     z-index: 2;
-    width: calc(102vh * 16 / 9);
+    width: calc(102vh * 16 / 10);
     pointer-events: none;
-  }
-
-  .vignette {
-    background: linear-gradient(
-      to right,
-      rgba(0, 0, 0, 0.25),
-      transparent,
-      transparent,
-      rgba(0, 0, 0, 0.25)
-    );
   }
 
   .back {
@@ -90,7 +79,7 @@ body {
     bottom: 1vh;
     transform: rotate3d(0, 0, 1, -3deg);
 
-    @media (max-aspect-ratio: 16 / 9) {
+    @media (max-aspect-ratio: 16 / 10) {
       right: 1vh;
     }
   }
@@ -319,4 +308,8 @@ a {
     background: none;
     box-shadow: none;
   }
+}
+
+.pause {
+  animation-play-state: paused !important;
 }
