--- a/src/components/mainmenu/index.scss
+++ b/src/components/mainmenu/index.scss
@@ -44,6 +44,13 @@ section.mainmenu {
       height: 5vmin;
       background: url("images/leaf.png") 50% 50%/100% 100% no-repeat;
     }
+
+    &.pause {
+      .leaf {
+        visibility: hidden;
+        animation-play-state: paused;
+      }
+    }
   }
 
   .dust {
@@ -52,7 +59,9 @@ section.mainmenu {
     left: 0;
     width: 100%;
     height: 100%;
-    background: url("images/asfalt-light.png");
+    opacity: 0.55;
+    background: url("images/asfalt-light.png") 0 0/300px auto,
+      url("images/asfalt-light.png") 0 0/300px auto;
   }
 
   .logo {
@@ -197,24 +206,23 @@ section.mainmenu {
   }
 }
 
+.js section.mainmenu {
+  .intro-0 {
+    animation-delay: 0.01s;
+  }
+
+  .intro-1 .background {
+    animation-delay: 0.625s;
+  }
+
+  .intro-1 .square {
+    animation-delay: 0.01s;
+  }
+}
+
 .skip-intro section.mainmenu {
   .intro-0,
   .intro-1 {
     display: none;
-  }
-}
-
-.pause-leaves section.mainmenu {
-  .leaf-container .leaf {
-    animation-play-state: paused;
-  }
-}
-
-.pause-intro section.mainmenu {
-  .intro-0,
-  .intro-0 .inner,
-  .intro-1 .background,
-  .intro-1 .square {
-    animation-play-state: paused;
   }
 }
