--- a/src/components/transition/about.scss
+++ b/src/components/transition/about.scss
@@ -7,9 +7,7 @@
 
   mix-blend-mode: hard-light;
 
-  @media (-ms-high-contrast: none),
-    (-ms-high-contrast: active),
-    (max-width: 25.5em) {
+  @media (-ms-high-contrast: none), (-ms-high-contrast: active) {
     background: radial-gradient(white 5%, rgba(255, 106, 0, 0.5) 67%);
 
     mix-blend-mode: normal;
@@ -84,12 +82,12 @@
   ~ .about-decorations {
     .pillar {
       &:nth-child(1) {
-        transition: 0.24s transform 0.6s;
+        transition: 0.24s transform 0.55s;
         transform: rotate3d(0, 0, 1, -5deg) scale3d(1, 1, 1);
       }
 
       &:nth-child(2) {
-        transition: 0.24s transform 0.85s;
+        transition: 0.24s transform 0.8s;
         transform: rotate3d(0, 0, 1, 5deg) scale3d(1, 1, 1);
       }
     }
@@ -100,7 +98,7 @@
     }
 
     .flower-2 {
-      transition: 0.24s transform 1.15s;
+      transition: 0.24s transform 1.05s;
       transform: rotate3d(0, 0, 1, -90deg) scale3d(1, 1, 1);
     }
   }
