--- a/src/components/transition/work.scss
+++ b/src/components/transition/work.scss
@@ -7,13 +7,11 @@
 
   mix-blend-mode: hard-light;
 
-  @media (-ms-high-contrast: none),
-    (-ms-high-contrast: active),
-    (max-width: 25.5em) {
+  @media (-ms-high-contrast: none), (-ms-high-contrast: active) {
     background: radial-gradient(
-      rgba(9, 128, 255, 0.5),
+      rgba(10, 130, 255, 0.35),
       #00ffcf,
-      rgba(97, 97, 181, 0.5)
+      rgba(0, 0, 250, 0.35)
     );
 
     mix-blend-mode: normal;
