Add links to projects with WIP articles

--- a/src/components/construction/index.ejs
+++ b/src/components/construction/index.ejs
@@ -4,7 +4,12 @@
     <%- md(`
 # <span>WIP</span>
 
-Page is under construction. Check back later.
+Article is under construction. Check back later.
+
+Project Demo Links:
+
+- [Pieretta in WebGL](https://jialiang.github.io/pieretta/)
+- [Space Gems](https://jialiang.github.io/space-gems/)
     `) %>
   </div>
 </section>
