--- a/src/components/work/index.ejs
+++ b/src/components/work/index.ejs
@@ -109,13 +109,10 @@
             "
             sizes="(max-width: 25.5em) calc(100vw - 2em), 23.5em"
           />
-          <img
-            src="images/project-3-780.jpg"
-            alt="Tile Matching Game project cover image"
-          />
+          <img src="images/project-3-780.jpg" alt="Space Gems cover image" />
         </picture>
         <figcaption>
-          <div class="title">Tile Matching Game</div>
+          <div class="title">Space Gems</div>
           <div class="action" aria-hidden="true">Read</div>
         </figcaption>
       </figure>
