Add in space-gems article

--- a/src/components/about/index.ejs
+++ b/src/components/about/index.ejs
@@ -40,7 +40,7 @@ But I don't think that's what's important.
 Algorithms & Frameworks are easily learned.
 Attitude & Mindset, not so much.
 
-**Instead of reading, let's talk.**
+**So let's talk instead.**
 
 [hojialiang@yahoo.com](mailto:hojialiang@yahoo.com "My Email")
     `) %>
