--- a/src/index.ejs
+++ b/src/index.ejs
@@ -57,6 +57,8 @@
       <!--  -->
       <%- include("components/matrix/index") %>
       <!--  -->
+      <%- include("components/gems/index") %>
+      <!--  -->
       <%- include("components/construction/index") %>
       <!--  -->
       <%- include("components/mainmenu/index") %>
