--- a/src/components/transition/work.scss
+++ b/src/components/transition/work.scss
@@ -57,12 +57,12 @@
 
   ~ .work-decorations {
     .fish-1 {
-      transition: 0.24s transform 0.4s ease-in;
+      transition: 0.24s transform 0.4s;
       transform: scale3d(1, 1, 1);
     }
 
     .fish-2 {
-      transition: 0.24s transform 0.65s ease-out;
+      transition: 0.24s transform 0.65s;
       transform: rotate3d(0, 0, 1, 90deg) scale3d(1, 1, 1);
     }
   }
