--- a/src/components/work/index.ejs
+++ b/src/components/work/index.ejs
@@ -62,6 +62,32 @@
         </figcaption>
       </figure>
     </a>
+    <a href="#gems">
+      <figure>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          viewbox="0 0 507 285"
+          width="507"
+          height="285"
+        ></svg>
+        <picture>
+          <source
+            type="image/webp"
+            srcset="
+              images/project-3-360.webp 360w,
+              images/project-3-520.webp 520w,
+              images/project-3-780.webp 780w
+            "
+            sizes="(max-width: 25.5em) calc(100vw - 2em), 23.5em"
+          />
+          <img src="images/project-3-780.jpg" alt="Space Gems cover image" />
+        </picture>
+        <figcaption>
+          <div class="title">Space Gems</div>
+          <div class="action" aria-hidden="true">Read</div>
+        </figcaption>
+      </figure>
+    </a>
     <a href="#construction">
       <figure>
         <svg
@@ -87,32 +113,6 @@
         </picture>
         <figcaption>
           <div class="title">Pieretta in WebGL</div>
-          <div class="action" aria-hidden="true">Read</div>
-        </figcaption>
-      </figure>
-    </a>
-    <a href="#construction">
-      <figure>
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          viewbox="0 0 507 285"
-          width="507"
-          height="285"
-        ></svg>
-        <picture>
-          <source
-            type="image/webp"
-            srcset="
-              images/project-3-360.webp 360w,
-              images/project-3-520.webp 520w,
-              images/project-3-780.webp 780w
-            "
-            sizes="(max-width: 25.5em) calc(100vw - 2em), 23.5em"
-          />
-          <img src="images/project-3-780.jpg" alt="Space Gems cover image" />
-        </picture>
-        <figcaption>
-          <div class="title">Space Gems</div>
           <div class="action" aria-hidden="true">Read</div>
         </figcaption>
       </figure>
