Update main pages text design

--- a/src/components/about/index.ejs
+++ b/src/components/about/index.ejs
@@ -15,34 +15,41 @@
   <path d="M267.5 74.6c-8.3 7-6.2 11.8-.1 16.6 20.8 16.3 22.9 37.4 16.1 61.3-5.2 18.2-9.3 36.7-14.4 57.3L252 140.4c-41.2 13.2-83.9 8.6-127.6 1.8-2.8 22.5 0 45.1-10.1 65.9-2.1-11.6-3.8-22.7-6.4-33.6-1.3-5.4-4.5-10.3-6.4-15.6-4.1-11.3-3.4-21.8 6.4-31.2l-12.8 4.1-1.6-1.4 28.2-33.6-12.8-9.3 29.2-3.8-18.2-14.2c24.9-3.3 49-7.2 73.3-9.5 17.5-1.8 35 3.2 48.8 14 6.5 5 11.8 8.4 18.9 1.7 1-.8 3-.5 6.6-1.1z" id="path24" fill="#6c6c6c" stroke="#fff" stroke-miterlimit="10" stroke-width="3" stroke-dasharray="none"></path>
 </svg>
 
-Jia Liang
+Hi, I'm Jia Liang
 [hojialiang@yahoo.com](mailto:hojialiang@yahoo.com "My Email")
 
-[my resume](https://google.com "My Resume")
+I'm an <span class="no-break">Information Systems</span> Graduate.
+Made my 1st website <span class="no-break">6 years ago.</span>
+Lived in Singapore <span class="no-break">for 2 years.</span>
 
-Information Systems Graduate.
-Made my 1st website 6 years ago.
-Lived in Singapore for 2 years.
+<br />
+<br />
+<br />
 
----
-
-At my current job, I use:
+<p class="white">At my current job, <br />everyday I use</p>
 
 React, Redux.
 HTML, CSS, JavaScript.
 NodeJS, Typescript, Jest.
 Sequelize, Knex, Postgres.
 
-You can see my resume for the full list.
+Check out [my resume](https://google.com "My Resume") <br />for the full list.
 
-But I don't think that's what's important.
+<br />
+<br />
+<br />
 
-Algorithms & Frameworks are easily learned.
-Attitude & Mindset, not so much.
+<p class="white">But I don't think that's<br />what's important.</p>
 
-**So let's talk instead.**
+Algorithms & Frameworks <br />are easily learned.
+Attitude & Mindset, <br />not so much.
+
+<p class="white">So let's talk instead.</p>
+
+<br />
 
 [hojialiang@yahoo.com](mailto:hojialiang@yahoo.com "My Email")
+
     `) %>
   </div>
 </section>
