--- a/src/components/work/index.ejs
+++ b/src/components/work/index.ejs
@@ -3,7 +3,10 @@
     <h1>
       <span>Work</span>
     </h1>
-    <p>Some of my personal projects:</p>
+    <br />
+    <br />
+    <p>Some of my <span class="no-break">personal projects:</span></p>
+    <br />
     <a href="#website">
       <figure>
         <svg
@@ -117,7 +120,8 @@
         </figcaption>
       </figure>
     </a>
-    <p>Stay tuned.</p>
-    <p>More stuff might be added soon.</p>
+    <p class="white no-break">Stay tuned.</p>
+    <br />
+    <p><span class="no-break">More stuff might</span> be added soon.</p>
   </div>
 </section>
