--- a/src/components/about/index.scss
+++ b/src/components/about/index.scss
@@ -1,11 +1,15 @@
 #about {
+  .text-container {
+    max-width: 21em;
+  }
+
   .avatar {
     display: block;
     width: 7em;
     max-width: 100%;
-    margin: 1.5em 0 -0.5em 0;
+    margin: 1.5em 0;
+    border: 2px solid black;
     border-radius: 100%;
     background: white;
-    box-shadow: 0 0 1em black, 0 0 1em black inset;
   }
 }
