--- a/src/components/mainmenu/index.scss
+++ b/src/components/mainmenu/index.scss
@@ -144,8 +144,9 @@ section.mainmenu {
     .background {
       width: 100%;
       height: 100%;
-      animation: 0s fade-out 1.425s both;
+      animation: 0.25s fade-out 1.425s both;
       background: #d1a12e;
+      will-change: opacity;
     }
 
     .square {
