--- a/src/components/transition/thanks.scss
+++ b/src/components/transition/thanks.scss
@@ -18,6 +18,7 @@
     height: 2em;
     padding: 0;
     background: url("images/star.png") 0 0/100% 100% no-repeat;
+    box-shadow: none;
   }
 }
 
