--- a/src/components/transition/about.scss
+++ b/src/components/transition/about.scss
@@ -57,6 +57,8 @@
     height: 350px;
     transform: rotate3d(0, 0, 1, 24deg) scale3d(0, 0, 1);
     background: inline-svg("floral", black, black) 0 100%/350px auto no-repeat;
+
+    will-change: transform;
   }
 
   .flower-2 {
