--- a/src/index.ejs
+++ b/src/index.ejs
@@ -89,7 +89,8 @@
     <script>
       function init() {
         var d = document;
-        var raf = requestAnimationFrame;
+        var raf = (func) =>
+          requestAnimationFrame(() => requestAnimationFrame(func));
         var qs = d.querySelector.bind(d);
         var qsa = d.querySelectorAll.bind(d);
 
@@ -116,10 +117,10 @@
             if (index < actions.length) {
               actions[index]();
               index += 1;
-              next();
+              raf(next);
             }
           }
-          next();
+          raf(next);
         }
 
         var skipIntro = false;
@@ -195,7 +196,7 @@
             });
             elems[0].addEventListener("animationend", function (e) {
               if (e.target !== elems[0]) return;
-              raf(next);
+              next();
             });
           });
 
