Simply intro animation

--- a/src/components/mainmenu/index.ejs
+++ b/src/components/mainmenu/index.ejs
@@ -24,13 +24,7 @@
       >Thanks & Attribution</a
     >
   </nav>
-  <div class="intro-1" role="presentation">
-    <div class="square"></div>
-    <div class="square"></div>
-    <div class="square"></div>
-    <div class="square"></div>
-    <div class="background"></div>
-  </div>
+  <div class="intro-1" role="presentation"></div>
   <div class="intro-0" role="presentation">
     <span aria-hidden="true">LOADING...</span>
     <div class="inner"></div>
