--- a/src/index.ejs
+++ b/src/index.ejs
@@ -178,7 +178,7 @@
           var introElems = [
             ".intro-0 .inner",
             ".intro-0",
-            ".intro-1 .square, .intro-1 .background",
+            ".intro-1",
             ".leaf-container",
           ];
 
