--- a/src/components/transition/about.scss
+++ b/src/components/transition/about.scss
@@ -1,16 +1,16 @@
 @import "sass-inline-svg.scss";
 
 .about-filter {
-  transform: scale3d(0, 0, 1);
+  transform: scale3d(0, 0, 0);
   pointer-events: none;
   background: radial-gradient(snow, saddlebrown);
 
   mix-blend-mode: hard-light;
+  will-change: transform;
 
   @media (-ms-high-contrast: none), (-ms-high-contrast: active) {
+    opacity: 0.5;
     background: radial-gradient(white 5%, rgba(255, 106, 0, 0.5) 67%);
-
-    mix-blend-mode: normal;
   }
 }
 
@@ -57,8 +57,6 @@
     height: 350px;
     transform: rotate3d(0, 0, 1, 24deg) scale3d(0, 0, 1);
     background: inline-svg("floral", black, black) 0 100%/350px auto no-repeat;
-
-    will-change: transform;
   }
 
   .flower-2 {
@@ -77,30 +75,30 @@
 
 #about:target {
   ~ .about-filter {
-    transition: 0.29s transform 0.1s;
+    transition: 0.29s transform;
     transform: scale3d(1, 1, 1);
   }
 
   ~ .about-decorations {
     .pillar {
       &:nth-child(1) {
-        transition: 0.24s transform 0.55s;
+        transition: 0.24s transform 0.35s;
         transform: rotate3d(0, 0, 1, -5deg) scale3d(1, 1, 1);
       }
 
       &:nth-child(2) {
-        transition: 0.24s transform 0.7s;
+        transition: 0.24s transform 0.5s;
         transform: rotate3d(0, 0, 1, 5deg) scale3d(1, 1, 1);
       }
     }
 
     .flower-1 {
-      transition: 0.24s transform 0.4s;
+      transition: 0.24s transform 0.15s;
       transform: rotate3d(0, 0, 1, 24deg) scale3d(1, 1, 1);
     }
 
     .flower-2 {
-      transition: 0.24s transform 0.85s;
+      transition: 0.24s transform 0.65s;
       transform: rotate3d(0, 0, 1, -90deg) scale3d(1, 1, 1);
     }
   }
