Add in new Shit Compressor project

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -59,6 +59,8 @@
       <!--  -->
       <%- include("components/gems/index") %>
       <!--  -->
+      <%- include("components/shit/index") %>
+      <!--  -->
       <%- include("components/construction/index") %>
       <!--  -->
       <%- include("components/mainmenu/index") %>
