--- a/src/components/transition/thanks.scss
+++ b/src/components/transition/thanks.scss
@@ -1,5 +1,3 @@
-@import "sass-inline-svg.scss";
-
 #thanks {
   h1 {
     position: relative;
@@ -25,8 +23,7 @@
 .thanks-filter {
   transform: scale3d(0, 0, 0);
   pointer-events: none;
-  background: inline-svg("radial") 50% 50%/100% auto,
-    radial-gradient(gold, goldenrod);
+  background: radial-gradient(lightyellow, goldenrod);
 
   mix-blend-mode: hard-light;
   will-change: transform;
