--- a/src/components/work/index.ejs
+++ b/src/components/work/index.ejs
@@ -91,6 +91,35 @@
         </figcaption>
       </figure>
     </a>
+    <a href="https://jialiang.github.io/ygo/" target="_blank">
+      <figure>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          viewbox="0 0 507 285"
+          width="507"
+          height="285"
+        ></svg>
+        <picture>
+          <source
+            type="image/webp"
+            srcset="
+              images/project-6-360.webp 360w,
+              images/project-6-520.webp 520w,
+              images/project-6-780.webp 780w
+            "
+            sizes="(max-width: 25.5em) calc(100vw - 2em), 23.5em"
+          />
+          <img
+            src="images/project-6-780.jpg"
+            alt="Yu-Gi-Oh OCG Secret Rare Effect with CSS cover image"
+          />
+        </picture>
+        <figcaption>
+          <div class="title">Yu-Gi-Oh OCG Secret Rare Effect with CSS</div>
+          <div class="action" aria-hidden="true">See & Read</div>
+        </figcaption>
+      </figure>
+    </a>
     <a href="#matrix">
       <figure>
         <svg
