Add google site verification

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -44,6 +44,10 @@
       }
     </style>
     <link rel="stylesheet" href="index.css" data-embed />
+    <meta
+      name="google-site-verification"
+      content="6uPryOYYLhFpVTaC-X1zqPucQxYuBHjYXV-V6UE4hSQ"
+    />
   </head>
   <body>
     <div class="sub-body">
