Remove intro animations

--- a/src/components/mainmenu/index.ejs
+++ b/src/components/mainmenu/index.ejs
@@ -1,6 +1,6 @@
 <section class="mainmenu">
   <div class="room" role="presentation"></div>
-  <div class="glow" role="presentation"></div>
+  <div class="glow play" role="presentation"></div>
   <div class="paper" role="presentation"></div>
   <h1 class="logo">Jia Liang, software engineer</h1>
   <div class="leaf-container" role="presentation">
@@ -24,9 +24,4 @@
       >Thanks & Attribution</a
     >
   </nav>
-  <div class="intro-1" role="presentation"></div>
-  <div class="intro-0" role="presentation">
-    <span aria-hidden="true">LOADING...</span>
-    <div class="inner"></div>
-  </div>
 </section>
