--- a/src/index.ejs
+++ b/src/index.ejs
@@ -24,26 +24,6 @@
       content="https://jialiang.github.io/images/project-1-780.jpg"
     />
     <meta name="author" content="Jia Liang, hojialiang@yahoo.com" />
-    <style>
-      @font-face {
-        font-family: "Atkinson";
-        font-style: normal;
-        font-weight: 400;
-        font-display: swap;
-        src: url("Atkinson-Hyperlegible-Regular-102a.woff2") format("woff2"),
-          url("Atkinson-Hyperlegible-Regular-102.woff") format("woff");
-      }
-
-      @font-face {
-        font-family: "Atkinson";
-        font-style: normal;
-        font-weight: 700;
-        font-display: swap;
-        src: url("Atkinson-Hyperlegible-Bold-102a.woff2") format("woff2"),
-          url("Atkinson-Hyperlegible-Bold-102.woff") format("woff");
-      }
-    </style>
-    <link rel="stylesheet" href="index.css" data-embed />
     <meta
       name="google-site-verification"
       content="6uPryOYYLhFpVTaC-X1zqPucQxYuBHjYXV-V6UE4hSQ"
@@ -92,6 +72,7 @@
         >BACK</a
       >
     </div>
+    <link rel="stylesheet" href="index.css" data-embed />
     <script>
       function init() {
         var d = document;
@@ -129,34 +110,19 @@
           raf(next);
         }
 
-        var skipIntro = false;
-
-        addClass(d.body, "js");
-
-        // Skips intro
-        {
-          loop(qsa("section"), function (section) {
-            if (section.id && "#" + section.id === location.hash) {
-              addClass(d.body, "skip-intro");
-              skipIntro = true;
-              section.focus();
-            }
-          });
-        }
-
         // Controls switching between pages
         {
           var infinites = qsa(".leaf-container, .glow");
 
           var pauseInfinites = function () {
             loop(infinites, function (elem) {
-              addClass(elem, "pause");
+              removeClass(elem, "play");
             });
           };
 
           var unpauseInfinites = function () {
             loop(infinites, function (elem) {
-              removeClass(elem, "pause");
+              addClass(elem, "play");
             });
           };
 
@@ -175,38 +141,6 @@
               }
             });
           });
-        }
-
-        if (skipIntro) return;
-
-        // Controls intro animation
-        {
-          var introElems = [
-            ".intro-0 .inner",
-            ".intro-0",
-            ".intro-1",
-            ".leaf-container",
-          ];
-
-          var next = raf.bind(window, function (callback) {
-            var elems = qsa(introElems.shift());
-            loop(elems, function (elem) {
-              removeClass(elem, "pause");
-            });
-          });
-
-          loop(introElems, function (selector) {
-            var elems = qsa(selector);
-            loop(elems, function (elem) {
-              addClass(elem, "pause");
-            });
-            elems[0].addEventListener("animationend", function (e) {
-              if (e.target !== elems[0]) return;
-              next();
-            });
-          });
-
-          next();
         }
       }
 
