--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -41,6 +41,7 @@ body {
     height: 100%;
     transform: translateZ(0);
     border-left: 2px solid rgba(0, 0, 0, 0);
+    content-visibility: auto;
 
     overscroll-behavior-y: contain;
 
