Add lazy loading to images

--- a/src/components/work/index.ejs
+++ b/src/components/work/index.ejs
@@ -28,6 +28,7 @@
           <img
             src="images/project-1-780.jpg"
             alt="Screenshot of this website"
+            loading="lazy"
           />
         </picture>
         <figcaption>
@@ -57,6 +58,7 @@
           <img
             src="images/project-5-780.jpg"
             alt="Shit Compressor cover image"
+            loading="lazy"
           />
         </picture>
         <figcaption>
@@ -83,7 +85,11 @@
             "
             sizes="(max-width: 25.5em) calc(100vw - 2em), 23.5em"
           />
-          <img src="images/project-3-780.jpg" alt="Space Gems cover image" />
+          <img
+            src="images/project-3-780.jpg"
+            alt="Space Gems cover image"
+            loading="lazy"
+          />
         </picture>
         <figcaption>
           <div class="title">Space Gems</div>
@@ -112,6 +118,7 @@
           <img
             src="images/project-6-780.jpg"
             alt="Yu-Gi-Oh OCG Secret Rare Effect with CSS cover image"
+            loading="lazy"
           />
         </picture>
         <figcaption>
@@ -141,6 +148,7 @@
           <img
             src="images/project-4-780.jpg"
             alt="Screenshot of Pure CSS Matrix Digital Rain project"
+            loading="lazy"
           />
         </picture>
         <figcaption>
@@ -170,6 +178,7 @@
           <img
             src="images/project-2-780.jpg"
             alt="Pieretta in WebGL project cover image"
+            loading="lazy"
           />
         </picture>
         <figcaption>
