--- a/src/components/mainmenu/index.ejs
+++ b/src/components/mainmenu/index.ejs
@@ -1,21 +1,27 @@
 <section class="mainmenu">
-  <div class="room" role="presentation"></div>
-  <div class="glow play" role="presentation"></div>
-  <div class="paper" role="presentation"></div>
-  <h1 class="logo">Jia Liang, software engineer</h1>
-  <div class="leaf-container" role="presentation">
-    <div class="leaf"></div>
-    <div class="leaf"></div>
-    <div class="leaf"></div>
-    <div class="leaf"></div>
-    <div class="leaf"></div>
-    <div class="leaf"></div>
-    <div class="leaf"></div>
-    <div class="leaf"></div>
-    <div class="leaf"></div>
-    <div class="leaf"></div>
+  <div class="isolate" role="presentation">
+    <div class="room" role="presentation"></div>
+    <div class="glow play" role="presentation"></div>
+    <div class="paper" role="presentation"></div>
+    <div class="dust" role="presentation"></div>
+    <div class="color" role="presentation"></div>
+    <div class="about-filter" role="presentation"></div>
+    <div class="work-filter" role="presentation"></div>
+    <div class="thanks-filter" role="presentation"></div>
   </div>
-  <div class="dust" role="presentation"></div>
+  <h1 class="logo">Jia Liang, software engineer</h1>
+  <!-- <div class="leaf-container" role="presentation">
+    <div class="leaf"></div>
+    <div class="leaf"></div>
+    <div class="leaf"></div>
+    <div class="leaf"></div>
+    <div class="leaf"></div>
+    <div class="leaf"></div>
+    <div class="leaf"></div>
+    <div class="leaf"></div>
+    <div class="leaf"></div>
+    <div class="leaf"></div>
+  </div> -->
   <nav class="nav">
     <a class="button" href="#about" title="Go to About section">ABOUT</a
     ><a class="button" href="#work" title="Go to Work section">WORK</a>
