--- a/src/index.ejs
+++ b/src/index.ejs
@@ -112,7 +112,7 @@
 
         // Controls switching between pages
         {
-          var infinites = qsa(".leaf-container, .glow");
+          var infinites = qsa(".glow");
 
           var pauseInfinites = function () {
             loop(infinites, function (elem) {
