--- a/src/components/mainmenu/index.scss
+++ b/src/components/mainmenu/index.scss
@@ -3,7 +3,14 @@
 section.mainmenu {
   z-index: 1;
   overflow-y: hidden;
-  background: #22182b linear-gradient(black, rgba(0, 0, 0, 0), #140f18 55%);
+  background: black;
+
+  .isolate {
+    height: 100%;
+    background: black;
+
+    isolation: isolate;
+  }
 
   .room {
     position: absolute;
@@ -42,21 +49,21 @@ section.mainmenu {
     background: inline-svg("paper") 0 0 / auto 100% no-repeat;
   }
 
-  .leaf-container {
-    .leaf {
-      position: absolute;
-      width: 5vmin;
-      height: 5vmin;
-      animation-play-state: paused;
-      background: url("images/leaf.png") 50% 50%/100% 100% no-repeat;
-    }
+  // .leaf-container {
+  //   .leaf {
+  //     position: absolute;
+  //     width: 5vmin;
+  //     height: 5vmin;
+  //     animation-play-state: paused;
+  //     background: url("images/leaf.png") 50% 50%/100% 100% no-repeat;
+  //   }
 
-    &.play {
-      .leaf {
-        animation-play-state: running;
-      }
-    }
-  }
+  //   &.play {
+  //     .leaf {
+  //       animation-play-state: running;
+  //     }
+  //   }
+  // }
 
   .dust {
     position: absolute;
@@ -69,23 +76,50 @@ section.mainmenu {
       url("images/asfalt-light.png") 0 0/300px auto;
   }
 
+  .color {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(to top right, transparent 67%, #2b4958);
+
+    mix-blend-mode: color;
+
+    @media (max-aspect-ratio: 1/ 1) {
+      display: none;
+    }
+  }
+
   .logo {
     font-size: 1vh;
+    position: absolute;
+    z-index: 1;
+    top: 0;
+    right: 0;
+    left: 0;
     overflow: hidden;
     width: 95vmin;
     height: 67%;
     margin: auto;
     white-space: nowrap;
     background: inline-svg("logo") 50% 50%/100% auto no-repeat;
+
+    filter: drop-shadow(0 0 2px black);
   }
 
   .nav {
-    font-size: 4.5vmin;
+    font-size: 5.5vmin;
     position: absolute;
-    top: 62.5vh;
+    z-index: 1;
+    top: 57.5vh;
     left: 0;
     width: 100%;
     text-align: center;
+
+    @media (min-width: 600px), (min-height: 600px) {
+      font-size: 33px;
+    }
 
     span {
       position: relative;
@@ -94,6 +128,11 @@ section.mainmenu {
     .button {
       margin: 1vh 1em;
       border-bottom: 2px solid rgba(0, 0, 0, 0);
+
+      &:hover,
+      &:focus {
+        border-bottom: 2px solid #e4e063;
+      }
     }
 
     .thanks {
