--- a/src/components/transition/about.scss
+++ b/src/components/transition/about.scss
@@ -1,9 +1,14 @@
 @import "sass-inline-svg.scss";
 
 .about-filter {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   transform: scale3d(0, 0, 0);
   pointer-events: none;
-  background: radial-gradient(snow, saddlebrown);
+  background: radial-gradient(#eee, snow 25%, saddlebrown);
 
   mix-blend-mode: hard-light;
   will-change: transform;
@@ -82,7 +87,7 @@
 }
 
 #about:target {
-  ~ .about-filter {
+  ~ .mainmenu .about-filter {
     transition: 0.29s transform;
     transform: scale3d(1, 1, 1);
   }
