--- a/src/components/transition/thanks.scss
+++ b/src/components/transition/thanks.scss
@@ -23,9 +23,15 @@
 }
 
 .thanks-filter {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   transform: scale3d(0, 0, 0);
   pointer-events: none;
-  background: radial-gradient(lightyellow, goldenrod) 0 0/100% auto no-repeat;
+  background: radial-gradient(gold, lightyellow 33%, goldenrod) 0 0/100% auto
+    no-repeat;
 
   mix-blend-mode: hard-light;
   will-change: transform;
@@ -50,7 +56,7 @@
     animation: 0.19s star-fade-in 0.6s ease-in both;
   }
 
-  ~ .thanks-filter {
+  ~ .mainmenu .thanks-filter {
     transition: 0.29s transform;
     transform: scale3d(1, 1, 1);
   }
