--- a/src/components/transition/work.scss
+++ b/src/components/transition/work.scss
@@ -1,6 +1,11 @@
 @import "sass-inline-svg.scss";
 
 .work-filter {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   transform: scale3d(0, 0, 0);
   pointer-events: none;
   background: radial-gradient(#0980ff, #88e7d5, #6161b5);
@@ -50,7 +55,7 @@
 }
 
 #work:target {
-  ~ .work-filter {
+  ~ .mainmenu .work-filter {
     transition: 0.29s transform;
     transform: scale3d(1, 1, 1);
   }
