Defer parsing of font-faces

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -24,6 +24,17 @@
       content="https://jialiang.github.io/images/project-1-780.jpg"
     />
     <meta name="author" content="Jia Liang, hojialiang@yahoo.com" />
+
+    <link rel="preload" href="fonts.css" as="style" />
+    <link
+      rel="stylesheet"
+      href="fonts.css"
+      media="print"
+      onload="this.media='all'"
+    />
+    <noscript>
+      <link rel="stylesheet" href="fonts.css" />
+    </noscript>
     <link rel="stylesheet" href="index.css" data-embed />
     <meta
       name="google-site-verification"
