--- a/src/components/mainmenu/index.scss
+++ b/src/components/mainmenu/index.scss
@@ -71,9 +71,8 @@ section.mainmenu {
     left: 0;
     width: 100%;
     height: 100%;
-    opacity: 0.55;
-    background: url("images/asfalt-light.png") 0 0/300px auto,
-      url("images/asfalt-light.png") 0 0/300px auto;
+    opacity: 0.4;
+    background: url("images/asfalt-light.png") 0 0/300px;
   }
 
   .color {
