--- a/src/components/transition/thanks.scss
+++ b/src/components/transition/thanks.scss
@@ -36,14 +36,14 @@
   mix-blend-mode: hard-light;
   will-change: transform;
 
-  @media (max-aspect-ratio: 1 / 1) {
-    background-size: auto 100%;
-  }
-
   @media (-ms-high-contrast: none), (-ms-high-contrast: active) {
     opacity: 0.5;
-    background-image: inline-svg("radial-solid") 0 0/100% auto no-repeat,
+    background: inline-svg("radial-solid") 0 0/100% auto no-repeat,
       radial-gradient(gold, rgba(218, 165, 32, 0.5));
+  }
+
+  @media (max-aspect-ratio: 1 / 1) {
+    background-size: auto 100%;
   }
 }
 
