--- a/src/components/mainmenu/index.scss
+++ b/src/components/mainmenu/index.scss
@@ -71,8 +71,10 @@ section.mainmenu {
     left: 0;
     width: 100%;
     height: 100%;
-    opacity: 0.4;
-    background: url("images/asfalt-light.png") 0 0/300px;
+    opacity: 0.5;
+    background: url("images/asfalt-light.png") 0 0/150px 150px repeat;
+
+    mix-blend-mode: exclusion;
   }
 
   .color {
@@ -83,7 +85,7 @@ section.mainmenu {
     height: 100%;
     background: linear-gradient(to top right, transparent 67%, #2b4958);
 
-    mix-blend-mode: color;
+    mix-blend-mode: exclusion;
 
     @media (max-aspect-ratio: 1/ 1) {
       display: none;
